feat: add inittial user structure and create endpoint

--- a/src/BackEnd/CarStore.API/appsettings.Development.json
+++ b/src/BackEnd/CarStore.API/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "ConnectionMySql": "Server=localhost;Port=3306;Database=car-store;User=root;Password=mysql;"
+    },
+    "Settings": {
+        "Password": {
+            "AdditionalKey": "ABC"
+        },
+        "Jwt": {
+            "ExpirationTimeMinutes": 1000,
+            "SigningKey": "BTwvomoSjYpwaYTiATJielKMZhuPctwR"
+        }
     }
-  }
 }
