feat: updated strucutre pastes and tests

--- a/src/BackEnd/CarStore.API/CarStore.API.csproj
+++ b/src/BackEnd/CarStore.API/CarStore.API.csproj
@@ -11,10 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\CarStore.Communication\CarStore.Communication.csproj" />
     <ProjectReference Include="..\..\Shared\CarStore.Exceptions\CarStore.Exceptions.csproj" />
     <ProjectReference Include="..\CarStore.Application\CarStore.Application.csproj" />
-    <ProjectReference Include="..\CarStore.Infrastructure\CarStore.Infrastructure.csproj" />
+    <ProjectReference Include="..\CarStore.Infrastructure\CarStore.Infrastructure.SQL.csproj" />
   </ItemGroup>
 
 </Project>
