--- a/CommonTestUtilies/CommonTestUtilies.csproj
+++ b/CommonTestUtilies/CommonTestUtilies.csproj
@@ -13,8 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\src\BackEnd\CarStore.Application\CarStore.Application.csproj" />
-    <ProjectReference Include="..\src\BackEnd\CarStore.Infrastructure\CarStore.Infrastructure.csproj" />
-    <ProjectReference Include="..\src\Shared\CarStore.Communication\CarStore.Communication.csproj" />
+    <ProjectReference Include="..\src\BackEnd\CarStore.Infrastructure\CarStore.Infrastructure.SQL.csproj" />
   </ItemGroup>
 
 </Project>
