--- a/src/BackEnd/CarStore.Infrastructure/CarStore.Infrastructure.SQL.csproj
+++ b/src/BackEnd/CarStore.Infrastructure/CarStore.Infrastructure.SQL.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentMigrator" Version="7.1.0" />
     <PackageReference Include="FluentMigrator.Runner" Version="7.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
   </ItemGroup>
 
