feat: add redis service

--- a/src/BackEnd/CarStore.API/appsettings.Development.json
+++ b/src/BackEnd/CarStore.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
-        "ConnectionMySql": "Server=localhost;Port=3306;Database=car-store;User=root;Password=mysql;"
+        "ConnectionMySql": "Server=localhost;Port=3306;Database=car-store;User=root;Password=mysql;",
+        "ConnectionRedis": "localhost:6379"
     },
     "Settings": {
         "Password": {
